Add warnings when vector module is note enabled or Lucene is running under buggy locale